[sam] Add what should contains the data folder for the DodgerLoopDay dataset

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -15,7 +15,12 @@
     "* Analysis of the model on Univariate time series (DodgerLoopDay dataset)\n",
     "* Analysis of the model on Multivariate time series (BasicMotions dataset)\n",
     "\n",
-    "With each time some exploratory experiments."
+    "With each time some exploratory experiments.\n",
+    "\n",
+    " The data folder contains the data such that there are: `./data/DodgerLoopDay/DodgerLoopDay_TEST.tsv` and `./data/DodgerLoopDay/DodgerLoopDay_TRAIN.tsv`\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -27,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +65,11 @@
     "from utils import (load_UCR_dataset)\n",
     "from loss import TripletLoss\n",
     "\n",
-    "root_data = './data/'"
+    "root_data = './data/'\n",
+    "\n",
+    "# The data folder contains the data such that there are:\n",
+    "# ./data/DodgerLoopDay/DodgerLoopDay_TEST.tsv\n",
+    "# ./data/DodgerLoopDay/DodgerLoopDay_TRAIN.tsv"
    ]
   },
   {
@@ -113,20 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(nan, grad_fn=<MeanBackward0>)"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Optimization parameters \n",
     "batch_size = 20\n",
@@ -171,7 +169,7 @@
     "# Now the goal is to fit the encoder\n",
     "\n",
     "(ref, pos) =next(iter(train_dataloader))\n",
-    "loss(model(ref[:,None,:]), model(pos[:,None,:]))\n"
+    "loss(model(ref[:,None,:]), model(pos[:,None,:]))"
    ]
   },
   {
