sam new with transferability

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -698,13 +698,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "3JlA6VAgDAb4"
    },
@@ -781,8 +774,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -790,20 +782,10 @@
     "id": "MUrE0rm8JNnr",
     "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "793.3800000000001"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "1060.66-267.28"
+    "# Transferability \n",
+    "\n",
+    "This sections aims at studying the transferability of the trained encoder.\n"
    ]
   },
   {
@@ -816,6 +798,163 @@
     "id": "MUrE0rm8JNnr",
     "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4"
    },
+   "outputs": [],
+   "source": [
+    "\n",
+    "def compute_scores_transfer(model, datamodule):\n",
+    "    '''\n",
+    "        Compute SVM accuracy score on the train then test set. Is sufficient train data, SVM C hyperparameters is found using grid search.  \n",
+    "    '''\n",
+    "\n",
+    "    if not model.multivariate:\n",
+    "        train_loader = datamodule.val_dataloader()\n",
+    "        test_loader = datamodule.test_dataloader()\n",
+    "        train_emb = list()\n",
+    "        train_labels = list()\n",
+    "        for _, (labels, train_series) in enumerate(train_loader):\n",
+    "            train_emb.append(model(train_series[:,None,:].cuda()).cpu().detach().numpy())\n",
+    "            train_labels.append(labels.numpy())\n",
+    "        train_emb = np.concatenate(train_emb)\n",
+    "        train_labels = np.concatenate(train_labels)\n",
+    "    else:\n",
+    "        train_loader = datamodule.val_dataloader()\n",
+    "        test_loader = datamodule.test_dataloader()\n",
+    "        train_emb = list()\n",
+    "        train_labels = list()\n",
+    "        for _, (labels, train_series) in enumerate(train_loader):\n",
+    "            train_emb.append(model(train_series.cuda()).cpu().detach().numpy())\n",
+    "            train_labels.append(labels.numpy())\n",
+    "        train_emb = np.concatenate(train_emb)\n",
+    "        train_labels = np.concatenate(train_labels)\n",
+    "\n",
+    "    \n",
+    "    nb_classes = len(np.unique(train_labels))\n",
+    "    train_size = train_emb.shape[0]\n",
+    "\n",
+    "    classifier = SVC(C=np.inf, gamma='scale')\n",
+    "    if train_size // nb_classes < 5 or train_size < 50:\n",
+    "        classifier = classifier.fit(train_emb, train_labels)\n",
+    "    else:\n",
+    "        grid_search = GridSearchCV(classifier, {'C': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000, 10000,np.inf],\n",
+    "                                                                        'kernel': ['linear'],'degree': [3],'gamma': ['scale'],'coef0': [0],'shrinking': [True],'probability': [False],'tol': [0.001],\n",
+    "                                                                            'cache_size': [200], 'class_weight': [None],'verbose': [False],'max_iter': [10000000],\n",
+    "                                                                        'decision_function_shape': ['ovr'],'random_state': [None]}, cv=5, n_jobs=5)\n",
+    "        if train_size <= 10000:\n",
+    "            grid_search.fit(train_emb, train_labels)\n",
+    "        else:\n",
+    "            # If the training set is too large, subsample 10000 train\n",
+    "            # examples\n",
+    "            split = train_test_split(\n",
+    "                train_emb, train_labels,\n",
+    "                train_size=10000, random_state=0, stratify=y\n",
+    "            )\n",
+    "            grid_search.fit(split[0], split[2])\n",
+    "        classifier = grid_search.best_estimator_\n",
+    "\n",
+    "    # Cross validation score\n",
+    "    train_score = np.mean(cross_val_score(classifier, train_emb, y=train_labels, cv=5, n_jobs=5))\n",
+    "    \n",
+    "    \n",
+    "    # Predict class for the test set\n",
+    "    if not model.multivariate:\n",
+    "        test_emb = list()\n",
+    "        test_labels = list()\n",
+    "        for _, (labels, test_series) in enumerate(test_loader):\n",
+    "            test_emb.append(model(test_series[:,None,:].cuda()).cpu().detach().numpy())\n",
+    "            test_labels.append(labels.numpy())\n",
+    "        test_emb = np.concatenate(test_emb)\n",
+    "        test_labels = np.concatenate(test_labels)\n",
+    "    else:\n",
+    "        test_emb = list()\n",
+    "        test_labels = list()\n",
+    "        for _, (labels, test_series) in enumerate(test_loader):\n",
+    "            test_emb.append(model(test_series.cuda()).cpu().detach().numpy())\n",
+    "            test_labels.append(labels.numpy())\n",
+    "        test_emb = np.concatenate(test_emb)\n",
+    "        test_labels = np.concatenate(test_labels)\n",
+    "\n",
+    "    \n",
+    "    test_score = np.mean(cross_val_score(classifier, test_emb, y=test_labels, cv=5, n_jobs=5))\n",
+    "\n",
+    "    \n",
+    "    return train_score, test_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyts.datasets import uea_dataset_list\n",
+    "uea_dataset_list = uea_dataset_list()\n",
+    "dataset_names = []\n",
+    "train_score_list = []\n",
+    "test_score_list = []\n",
+    "\n",
+    "for dataset_name in uea_dataset_list[:]:\n",
+    "    print('Doing {}'.format(dataset_name))\n",
+    "    #if dataset_name in ['DuckDuckGeese', 'EigenWorms', 'Ering']: # First one gives *** second one gives cuda outof memory (managable), third is 'non a zip file\n",
+    "    #    dataset_names.append(dataset_name)\n",
+    "    #    train_score_list.append(np.nan)\n",
+    "    #    test_score_list.append(np.nan)\n",
+    "    #    continue\n",
+    "\n",
+    "    try:\n",
+    "        # Datamodule importation\n",
+    "        datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
+    "        datamodule.setup()\n",
+    "\n",
+    "        in_channels = datamodule.train_set.time_series.shape[1]\n",
+    "\n",
+    "        train_score, test_score = compute_scores_transfer(model, datamodule)\n",
+    "        print('\\n', train_score, test_score)\n",
+    "        dataset_names.append(dataset_name)\n",
+    "        train_score_list.append(train_score)\n",
+    "        test_score_list.append(test_score)\n",
+    "\n",
+    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "        results.to_csv('./results_transfer.csv')\n",
+    "        results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "\n",
+    "        #except:\n",
+    "        #    print('Dataset: {} does not have enough example per class (will fix that)'.format(dataset_name))\n",
+    "    except:\n",
+    "        dataset_names.append(dataset_name)\n",
+    "        train_score_list.append(np.nan)\n",
+    "        test_score_list.append(np.nan)\n",
+    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "        results.to_csv('./results_transfer.csv')\n",
+    "        results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "        continue\n",
+    "\n",
+    "results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "results.to_csv('./results_transfer.csv')\n",
+    "results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  master\u001b[m\n",
+      "* \u001b[32msam\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
