Add nico code for  logging experiments and clea all notebooks and code, and add loss_name attribute

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -230,7 +230,7 @@
     "import torch\n",
     "\n",
     "from datamodule import TimeSeriesDataModule\n",
-    "from loss import TripletLoss\n",
+    "from loss import TripletLoss, TripletLossSIMCLR\n",
     "from model import (\n",
     "    CausalCNN,\n",
     "    CausalCNNEncoder,\n",
@@ -270,30 +270,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "0frr5ReXFMjA"
+    "heading_collapsed": "true",
+    "id": "0frr5ReXFMjA",
+    "tags": []
    },
    "source": [
-    "**Importation of the data**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QjqAEjAxFMjB",
-    "outputId": "1d7263d7-5534-407d-a860-731447f71164"
-   },
-   "outputs": [],
-   "source": [
-    "X_train, y_train, X_test, y_test = load_UCR_dataset(root_data, \"DodgerLoopDay\")\n",
-    "\n",
-    "print(\"X_train: {}\".format(X_train.shape))\n",
-    "print(\"y_train: {}\".format(y_train.shape))\n",
-    "print(\"X_test: {}\".format(X_test.shape))\n",
-    "print(\"y_test: {}\".format(y_test.shape))"
+    "## Training a single model"
    ]
   },
   {
@@ -514,24 +496,38 @@
    "source": [
     "from glob import glob \n",
     "\n",
+    "# Optimization parameters\n",
+    "batch_size = 10\n",
+    "num_workers = 2\n",
+    "betas = (0.9, 0.999)\n",
+    "weight_decay = 1e-2\n",
+    "lr = 0.001\n",
+    "\n",
+    "# Model parameter\n",
+    "in_channels = 1\n",
+    "channels = 40\n",
+    "depth = 10\n",
+    "reduced_size = 160\n",
+    "out_channels = 320\n",
+    "kernel_size = 3\n",
+    "N_sample = 288\n",
     "\n",
     "dataset_name = []\n",
     "train_score_list = []\n",
     "test_score_list = []\n",
     "\n",
-    "for dir_path in glob(os.path.join(root_data,'UCR','*')):\n",
+    "for dir_path in tqdm(glob(os.path.join(root_data,'*'))):\n",
     "    \n",
     "    print('Doing {}'.format(os.path.basename(dir_path)))\n",
     "    train_path = glob(os.path.join(dir_path,'*TRAIN.tsv'))[0] if len(glob(os.path.join(dir_path,'*TRAIN.tsv')))>0 else None\n",
-    "    test_path = glob(os.path.join(dir_path,'*TEST.tsv')) if len(glob(os.path.join(dir_path,'*TEST.tsv')))>0 else None\n",
-    "    \n",
+    "    test_path = glob(os.path.join(dir_path,'*TEST.tsv'))[0] if len(glob(os.path.join(dir_path,'*TEST.tsv')))>0 else None\n",
+    "\n",
     "    if train_path is None or test_path is None or os.path.basename(dir_path)=='PigAirwayPressure': \n",
     "        continue\n",
     "    \n",
     "\n",
     "    # Datamodule importation\n",
-    "    datamodule = TimeSeriesDataModule(train_path, val_path, batch_size, num_workers, min_length=20, multivariate=False, fill_na=True)\n",
-    "\n",
+    "    datamodule = TimeSeriesDataModule(train_path, test_path, batch_size, num_workers, min_length=20, multivariate=False, fill_na=True)\n",
     "    # Model definition\n",
     "    model = TimeSeriesEmbedder(\n",
     "        in_channels = in_channels,\n",
@@ -544,34 +540,50 @@
     "        weight_decay = weight_decay,\n",
     "        betas = betas,\n",
     "        train_path=train_path,\n",
-    "        test_path=val_path\n",
+    "        test_path=test_path\n",
     "    )\n",
     "    \n",
-    "    epochs = 200\n",
+    "    max_steps = 2000\n",
     "    checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
-    "         mode ='min',\n",
-    "         monitor='train_loss_epoch',\n",
-    "         dirpath='checkpoints',\n",
-    "        filename='causalcnn-{epoch:02d}-{train_loss_epoch:.2f}')\n",
+    "        mode=\"min\",\n",
+    "        monitor=\"train_loss_epoch\",\n",
+    "        dirpath=\"checkpoints\",\n",
+    "        filename=\"causalcnn-{epoch:02d}-{train_loss_epoch:.2f}\",\n",
+    "    )\n",
     "\n",
-    "    wandb_logger = pl.loggers.WandbLogger(project='Self Supervised Time Series Learning', name='ALL EXPERIMENTS - {}'.format(os.path.basename(dir_path)), prefix=os.path.basename(dir_path))\n",
-    "    trainer  = pl.Trainer(\n",
-    "        max_epochs=epochs,\n",
-    "        logger = wandb_logger,\n",
-    "        check_val_every_n_epoch=30,\n",
-    "        callbacks = [checkpoint_callback])\n",
+    "    \n",
+    "    run = wandb.init(\n",
+    "         project='self-supervised-time-series',\n",
+    "         name='ALL EXPERIMENTS - {}'.format(os.path.basename(dir_path)),\n",
+    "         tags=[os.path.basename(dir_path)],\n",
+    "         group='Sigmoid loss',\n",
+    "         entity='nicolas-dufour-team',\n",
+    "         reinit=True\n",
+    "         )\n",
+    "    wandb_logger = pl.loggers.WandbLogger()\n",
+    "    trainer = pl.Trainer(\n",
+    "        gpus=1,\n",
+    "        max_steps=max_steps,\n",
+    "        num_sanity_val_steps = -1,\n",
+    "        logger=wandb_logger,\n",
+    "        # val_check_interval=50,\n",
+    "        callbacks=[checkpoint_callback],\n",
+    "    )\n",
+    "    model.datamodule = datamodule\n",
     "    trainer.fit(model, datamodule)\n",
-    "    fig = trainer.test()\n",
+    "    fig = trainer.test(verbose=False)\n",
     "    \n",
-    "    try:\n",
-    "        train_score, test_score = model.compute_scores()\n",
-    "        print('\\n', train_score, test_score)\n",
-    "        dataset_name.append(os.path.basename(dir_path))\n",
-    "        train_score_list.append(train_score)\n",
-    "        test_score_list.append(test_score)\n",
-    "    except:\n",
-    "        print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
-    "    \n",
+    "    # try:\n",
+    "    train_score, test_score = model.compute_scores()\n",
+    "    print('\\n', train_score, test_score)\n",
+    "    dataset_name.append(os.path.basename(dir_path))\n",
+    "    wandb.log({'Train score': train_score})\n",
+    "    wandb.log({'Test score': test_score})\n",
+    "    train_score_list.append(train_score)\n",
+    "    test_score_list.append(test_score)\n",
+    "    # except:\n",
+    "    #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
+    "    run.finish()\n",
     "results = pd.DataFrame(np.array([dataset_name,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
     "results.to_csv('./results_univariate_without_training.csv')"
    ]
@@ -600,7 +612,7 @@
     "id": "L_lgOKBlDAb3"
    },
    "source": [
-    "# Training "
+    "## Training on a single model"
    ]
   },
   {
@@ -614,20 +626,20 @@
     "from pyts.datasets import load_basic_motions, uea_dataset_list, fetch_uea_dataset\n",
     "\n",
     "# Optimization parameters \n",
-    "batch_size = 20\n",
-    "num_workers = 4\n",
+    "batch_size = 10\n",
+    "num_workers = 2\n",
     "betas = (0.9, 0.999)\n",
     "weight_decay = 1e-2\n",
     "lr = 0.001\n",
     "\n",
-    "# Model parameter \n",
-    "in_channels = 9\n",
+    "# Model parameter\n",
+    "in_channels = 1\n",
     "channels = 40\n",
-    "depth = 7\n",
+    "depth = 10\n",
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "N_sample = 288\n",
+    "loss_name='TripletLossSIMCLR'\n",
     "\n",
     "# Data parameters\n",
     "train_path = os.path.join(root_data,'FordA','FordA_TRAIN.tsv')\n",
@@ -658,7 +670,8 @@
     "    train_path=train_path,\n",
     "    test_path=val_path, \n",
     "    dataset_name=dataset_name,\n",
-    "    multivariate=True)\n",
+    "    multivariate=True, \n",
+    "    loss_name=loss_name)\n",
     "\n"
    ]
   },
@@ -779,11 +792,13 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "heading_collapsed": "true",
     "id": "MUrE0rm8JNnr",
-    "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4"
+    "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4",
+    "tags": []
    },
    "source": [
-    "# Transferability \n",
+    "## Transferability \n",
     "\n",
     "This sections aims at studying the transferability of the trained encoder.\n"
    ]
@@ -1099,38 +1114,41 @@
    },
    "outputs": [],
    "source": [
-    "from pyts.datasets import load_basic_motions, uea_dataset_list, fetch_uea_dataset\n",
+    "from pyts.datasets import uea_dataset_list, fetch_uea_dataset\n",
     "\n",
-    "# Optimization parameters \n",
+    "from glob import glob \n",
+    "\n",
+    "# Optimization parameters\n",
     "batch_size = 10\n",
-    "num_workers = 4\n",
+    "num_workers = 2\n",
     "betas = (0.9, 0.999)\n",
     "weight_decay = 1e-2\n",
-    "lr = 0.0001\n",
+    "lr = 0.001\n",
     "\n",
-    "# Model parameter \n",
-    "in_channels = 9\n",
+    "# Model parameter\n",
+    "in_channels = 1\n",
     "channels = 40\n",
-    "depth = 7\n",
+    "depth = 10\n",
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "N_sample = 288\n",
-    "\n",
-    "# Data parameters\n",
-    "train_path = os.path.join(root_data,'FordA','FordA_TRAIN.tsv')\n",
-    "val_path = os.path.join(root_data,'FordA','FordA_TEST.tsv')\n",
+    "loss_name='TripletLossSIMCLR'\n",
     "\n",
     "\n",
-    "\n",
+    "# List of the multivariates dataset\n",
     "uea_dataset_list = uea_dataset_list()\n",
+    "\n",
+    "\n",
     "dataset_names = []\n",
     "train_score_list = []\n",
     "test_score_list = []\n",
     "\n",
-    "for dataset_name in uea_dataset_list[:]:\n",
+    "for dataset_name in uea_dataset_list:\n",
+    "    \n",
     "    print('Doing {}'.format(dataset_name))\n",
-    "    if dataset_name in ['DuckDuckGeese', 'Ering']: # First one gives *** second one gives cuda outof memory (managable), third is 'non a zip file\n",
+    "    \n",
+    "    # First one gives *** second one gives cuda outof memory (managable), third is 'non a zip file\n",
+    "    if dataset_name in ['DuckDuckGeese', 'Ering']: \n",
     "        dataset_names.append(dataset_name)\n",
     "        train_score_list.append(np.nan)\n",
     "        test_score_list.append(np.nan)\n",
@@ -1154,12 +1172,13 @@
     "            lr=lr,\n",
     "            weight_decay = weight_decay,\n",
     "            betas = betas,\n",
-    "            train_path=train_path,\n",
-    "            test_path=val_path, \n",
+    "            train_path='',\n",
+    "            test_path='', \n",
     "            dataset_name=dataset_name,\n",
-    "            multivariate=True)\n",
+    "            multivariate=True, \n",
+    "            loss_name=loss_name)\n",
     "\n",
-    "        max_steps = 300\n",
+    "        max_steps = 2000\n",
     "        checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
     "            mode=\"min\",\n",
     "            monitor=\"train_loss_epoch\",\n",
@@ -1167,30 +1186,42 @@
     "            filename=\"causalcnn-{epoch:02d}-{train_loss_epoch:.2f}\",\n",
     "        )\n",
     "\n",
-    "        wandb_logger = pl.loggers.WandbLogger(\n",
-    "            project=\"Self Supervised Time Series LEarning\", name=\"Run Wednesay - Multivariate All Dataset -ColabPro\")\n",
     "\n",
+    "        run = wandb.init(\n",
+    "             project='self-supervised-time-series',\n",
+    "             name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
+    "             tags=[dataset_name],\n",
+    "             group='SimCLR loss',\n",
+    "             entity='nicolas-dufour-team',\n",
+    "             reinit=True\n",
+    "             )\n",
+    "        wandb_logger = pl.loggers.WandbLogger()\n",
     "        trainer = pl.Trainer(\n",
-    "            gpus=1 if torch.cuda.is_available() else None,\n",
+    "            gpus=1,\n",
     "            max_steps=max_steps,\n",
     "            num_sanity_val_steps = -1,\n",
     "            logger=wandb_logger,\n",
-    "            #val_check_interval=50,\n",
+    "            # val_check_interval=50,\n",
     "            callbacks=[checkpoint_callback],\n",
     "        )\n",
-    "\n",
+    "        model.datamodule = datamodule\n",
     "        trainer.fit(model, datamodule)\n",
-    "        fig = trainer.test()\n",
+    "        fig = trainer.test(verbose=False)\n",
     "\n",
+    "        # try:\n",
     "        train_score, test_score = model.compute_scores()\n",
     "        print('\\n', train_score, test_score)\n",
-    "        dataset_names.append(dataset_name)\n",
+    "        dataset_name.append(os.path.basename(dir_path))\n",
+    "        wandb.log({'Train score': train_score})\n",
+    "        wandb.log({'Test score': test_score})\n",
     "        train_score_list.append(train_score)\n",
     "        test_score_list.append(test_score)\n",
-    "\n",
-    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_multivariate_with_training_colab_pro.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_multiariate_with_training_colab_pro.csv')\n",
+    "        # except:\n",
+    "        #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
+    "        run.finish()\n",
+    "        results = pd.DataFrame(np.array([dataset_name,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "        results.to_csv('./results_multivariate.csv')\n",
+    "        results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
     "\n",
     "    except:\n",
     "        print('Dataset: {} does not have enough example per class (will fix that)'.format(dataset_name))\n",
@@ -1198,50 +1229,29 @@
     "        train_score_list.append(np.nan)\n",
     "        test_score_list.append(np.nan)\n",
     "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_multivariate_with_training_colab_pro.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_multiariate_with_training_colab_pro.csv')\n",
-    "        continue\n",
-    "\n",
-    "results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "results.to_csv('./results_multivariate_with_training_colab_pro.csv')"
+    "        results.to_csv('./results_multivariate.csv')\n",
+    "        results.to_csv('/content/drive/MyDrive/results_multivariate.csv')\n",
+    "        continue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Lnv3he1UBkGn"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "results.to_csv('./results_multiariate_with_training.csv')\n",
-    "results.to_csv('/content/drive/MyDrive/results_multiariate_with_training.csv')\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 204
-    },
-    "id": "JC98M8yTBkIo",
-    "outputId": "264dbcbf-6a3b-4098-c25b-fa83c964bf43"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "results"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "hVA8JNmRBKf3"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
