--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -221,6 +221,8 @@
     "import json\n",
     "import os\n",
     "import sys\n",
+    "from tqdm.notebook import tqdm\n",
+    "import wandb\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -230,7 +232,7 @@
     "import torch\n",
     "\n",
     "from datamodule import TimeSeriesDataModule\n",
-    "from loss import TripletLoss, TripletLossSIMCLR\n",
+    "from loss import TripletLoss\n",
     "from model import (\n",
     "    CausalCNN,\n",
     "    CausalCNNEncoder,\n",
@@ -695,9 +697,16 @@
     "    filename=\"causalcnn-{epoch:02d}-{train_loss_epoch:.2f}\",\n",
     ")\n",
     "\n",
-    "wandb_logger = pl.loggers.WandbLogger(\n",
-    "    project=\"Self Supervised Time Series LEarning\", name=\"Run n 1 - Multivariate\"\n",
-    ")\n",
+    "run = wandb.init(\n",
+    "            project='self-supervised-time-series',\n",
+    "            name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
+    "            tags=[dataset_name, 'Multivariate'],\n",
+    "            group='Multivariate Transferability',\n",
+    "            entity='nicolas-dufour-team',\n",
+    "            reinit=True\n",
+    "            )\n",
+    "wandb_logger = pl.loggers.WandbLogger()\n",
+    "\n",
     "trainer = pl.Trainer(\n",
     "    gpus=1,\n",
     "    max_steps=max_steps,\n",
@@ -728,6 +737,26 @@
    "outputs": [],
    "source": [
     "trainer.validate(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Q7xs-DuxJNjV"
+   },
+   "outputs": [],
+   "source": [
+    "train_score, test_score = model.compute_scores()\n",
+    "print('\\n', train_score, test_score)\n",
+    "dataset_name.append(dataset_name)\n",
+    "wandb.log({'Train score': train_score})\n",
+    "wandb.log({'Test score': test_score})\n",
+    "train_score_list.append(train_score)\n",
+    "test_score_list.append(test_score)\n",
+    "# except:\n",
+    "#     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
+    "run.finish()"
    ]
   },
   {
@@ -1188,13 +1217,13 @@
     "\n",
     "\n",
     "        run = wandb.init(\n",
-    "             project='self-supervised-time-series',\n",
-    "             name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
-    "             tags=[dataset_name],\n",
-    "             group='SimCLR loss',\n",
-    "             entity='nicolas-dufour-team',\n",
-    "             reinit=True\n",
-    "             )\n",
+    "                project='self-supervised-time-series',\n",
+    "                name='ALL EXPERIMENTS - {}'.format(dataset_name),\n",
+    "                tags=[dataset_name, 'Multivariate'],\n",
+    "                group='Multivariate SimCLR loss',\n",
+    "                entity='nicolas-dufour-team',\n",
+    "                reinit=True\n",
+    "                )\n",
     "        wandb_logger = pl.loggers.WandbLogger()\n",
     "        trainer = pl.Trainer(\n",
     "            gpus=1,\n",
@@ -1208,10 +1237,10 @@
     "        trainer.fit(model, datamodule)\n",
     "        fig = trainer.test(verbose=False)\n",
     "\n",
-    "        # try:\n",
+    "\n",
     "        train_score, test_score = model.compute_scores()\n",
     "        print('\\n', train_score, test_score)\n",
-    "        dataset_name.append(os.path.basename(dir_path))\n",
+    "        dataset_name.append(dataset_name)\n",
     "        wandb.log({'Train score': train_score})\n",
     "        wandb.log({'Test score': test_score})\n",
     "        train_score_list.append(train_score)\n",
