Cleaned loss and train codes

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -637,6 +637,8 @@
     "out_channels = 320\n",
     "kernel_size = 3\n",
     "N_sample = 288\n",
+    "loss = \"logi\"\n",
+    "temp = 1\n",
     "\n",
     "dataset_name = []\n",
     "train_score_list = []\n",
@@ -684,8 +686,8 @@
     "        lr=lr,\n",
     "        weight_decay=weight_decay,\n",
     "        betas=betas,\n",
-    "        train_path=train_path,\n",
-    "        test_path=test_path,\n",
+    "        loss=loss,\n",
+    "        temp=temp,\n",
     "    )\n",
     "\n",
     "    max_steps = 2000\n",
@@ -942,6 +944,8 @@
     "out_channels = 320\n",
     "kernel_size = 3\n",
     "N_sample = 288\n",
+    "loss = \"xent\"\n",
+    "temp = 0.5\n",
     "\n",
     "dataset_name = []\n",
     "train_score_list = []\n",
@@ -971,14 +975,11 @@
     "    lr=lr,\n",
     "    weight_decay=weight_decay,\n",
     "    betas=betas,\n",
-    "    train_path=train_path,\n",
-    "    test_path=test_path,\n",
+    "    loss=loss,\n",
+    "    temp=temp,\n",
     ")\n",
     "\n",
-    "trainer = pl.Trainer(\n",
-    "    gpus=1,\n",
-    "    max_steps=max_steps,\n",
-    ")\n",
+    "trainer = pl.Trainer(gpus=1, max_steps=max_steps,)\n",
     "trainer.fit(model, datamodule)\n",
     "\n",
     "for dir_path in tqdm(glob(os.path.join(root_data, \"*\"))):\n",
