Fix scorer cuda error

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -108,19 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "!wget https://www.cs.ucr.edu/~eamonn/time_series_data_2018/UCRArchive_2018.zip\n",
-    "!unzip -P 'someone' UCRArchive_2018.zip\n",
-    "!mv UCRArchive_2018 data\n",
-    "!rm UCRArchive_2018.zip"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "5Bh3calDFMi9"
@@ -1013,6 +1000,7 @@
     "        multivariate=False,\n",
     "        fill_na=True,\n",
     "    )\n",
+    "    datamodule.setup()\n",
     "    run = wandb.init(\n",
     "        project=\"self-supervised-time-series\",\n",
     "        name=\"Transfert - {}\".format(os.path.basename(dir_path)),\n",
