--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -629,7 +629,7 @@
     "\n",
     "# Optimization parameters \n",
     "batch_size = 10\n",
-    "num_workers = 2\n",
+    "num_workers = 4\n",
     "betas = (0.9, 0.999)\n",
     "weight_decay = 1e-2\n",
     "lr = 0.001\n",
@@ -641,16 +641,13 @@
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "loss_name='TripletLossSIMCLR'\n",
-    "\n",
-    "# Data parameters\n",
-    "train_path = os.path.join(root_data,'FordA','FordA_TRAIN.tsv')\n",
-    "val_path = os.path.join(root_data,'FordA','FordA_TEST.tsv')\n",
+    "loss='TripletLossSIMCLR'\n",
     "\n",
     "\n",
     "\n",
-    "uea_dataset_list = uea_dataset_list()\n",
-    "dataset_name = uea_dataset_list[2]\n",
+    "dataset_names = ['BasicMotions', 'Cricket','EigenWorms', 'LSST','RacketSports', 'SelfRegulationSCP1']\n",
+    "\n",
+    "dataset_name = 'SelfRegulationSCP1'\n",
     "\n",
     "# Datamodule importation\n",
     "datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
@@ -669,12 +666,13 @@
     "    lr=lr,\n",
     "    weight_decay = weight_decay,\n",
     "    betas = betas,\n",
-    "    train_path=train_path,\n",
-    "    test_path=val_path, \n",
+    "    train_path='',\n",
+    "    test_path='', \n",
     "    dataset_name=dataset_name,\n",
     "    multivariate=True, \n",
     "    loss_name=loss_name)\n",
-    "\n"
+    "\n",
+    "model.datamodule = datamodule\n"
    ]
   },
   {
@@ -689,7 +687,7 @@
    },
    "outputs": [],
    "source": [
-    "max_steps = 300\n",
+    "max_steps = 2000\n",
     "checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
     "    mode=\"min\",\n",
     "    monitor=\"train_loss_epoch\",\n",
@@ -821,7 +819,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "heading_collapsed": "true",
     "id": "MUrE0rm8JNnr",
     "outputId": "f206abf2-b080-4fd1-c2a6-4e1e5053b0b4",
     "tags": []
@@ -844,27 +841,24 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "from sklearn.model_selection import (GridSearchCV,train_test_split, cross_val_score)\n",
+    "from sklearn.svm import SVC\n",
     "def compute_scores_transfer(model, datamodule):\n",
     "    '''\n",
     "        Compute SVM accuracy score on the train then test set. Is sufficient train data, SVM C hyperparameters is found using grid search.  \n",
     "    '''\n",
     "\n",
+    "    train_loader = datamodule.val_dataloader()\n",
+    "    test_loader = datamodule.test_dataloader()\n",
+    "    train_emb = list()\n",
+    "    train_labels = list()\n",
     "    if not model.multivariate:\n",
-    "        train_loader = datamodule.val_dataloader()\n",
-    "        test_loader = datamodule.test_dataloader()\n",
-    "        train_emb = list()\n",
-    "        train_labels = list()\n",
     "        for _, (labels, train_series) in enumerate(train_loader):\n",
     "            train_emb.append(model(train_series[:,None,:].cuda()).cpu().detach().numpy())\n",
     "            train_labels.append(labels.numpy())\n",
     "        train_emb = np.concatenate(train_emb)\n",
     "        train_labels = np.concatenate(train_labels)\n",
     "    else:\n",
-    "        train_loader = datamodule.val_dataloader()\n",
-    "        test_loader = datamodule.test_dataloader()\n",
-    "        train_emb = list()\n",
-    "        train_labels = list()\n",
     "        for _, (labels, train_series) in enumerate(train_loader):\n",
     "            train_emb.append(model(train_series.cuda()).cpu().detach().numpy())\n",
     "            train_labels.append(labels.numpy())\n",
@@ -930,13 +924,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyts.datasets import uea_dataset_list\n",
-    "uea_dataset_list = uea_dataset_list()\n",
-    "dataset_names = []\n",
+    "dataset_names_to_test = ['BasicMotions', 'Cricket','EigenWorms', 'LSST','RacketSports', 'SelfRegulationSCP1']\n",
+    "\n",
+    "\n",
     "train_score_list = []\n",
     "test_score_list = []\n",
+    "dataset_names = []\n",
     "\n",
-    "for dataset_name in uea_dataset_list[:]:\n",
+    "for dataset_name in dataset_names_to_test:\n",
     "    print('Doing {}'.format(dataset_name))\n",
     "    #if dataset_name in ['DuckDuckGeese', 'EigenWorms', 'Ering']: # First one gives *** second one gives cuda outof memory (managable), third is 'non a zip file\n",
     "    #    dataset_names.append(dataset_name)\n",
@@ -944,37 +939,33 @@
     "    #    test_score_list.append(np.nan)\n",
     "    #    continue\n",
     "\n",
-    "    try:\n",
-    "        # Datamodule importation\n",
-    "        datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
-    "        datamodule.setup()\n",
     "\n",
-    "        in_channels = datamodule.train_set.time_series.shape[1]\n",
+    "    # Datamodule importation\n",
+    "    datamodule = TimeSeriesDataModule('', '', batch_size, num_workers, dataset_name, min_length=20, multivariate=True, fill_na=True)\n",
+    "    datamodule.setup()\n",
     "\n",
-    "        train_score, test_score = compute_scores_transfer(model, datamodule)\n",
-    "        print('\\n', train_score, test_score)\n",
-    "        dataset_names.append(dataset_name)\n",
-    "        train_score_list.append(train_score)\n",
-    "        test_score_list.append(test_score)\n",
+    "    in_channels = datamodule.train_set.time_series.shape[1]\n",
     "\n",
-    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_transfer.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "    train_score, test_score = compute_scores_transfer(model, datamodule)\n",
+    "    print('\\n', train_score, test_score)\n",
     "\n",
-    "        #except:\n",
-    "        #    print('Dataset: {} does not have enough example per class (will fix that)'.format(dataset_name))\n",
-    "    except:\n",
-    "        dataset_names.append(dataset_name)\n",
-    "        train_score_list.append(np.nan)\n",
-    "        test_score_list.append(np.nan)\n",
-    "        results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "        results.to_csv('./results_transfer.csv')\n",
-    "        results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
-    "        continue\n",
+    "    dataset_names.append(dataset_name)\n",
+    "    train_score_list.append(train_score)\n",
+    "    test_score_list.append(test_score)\n",
     "\n",
-    "results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "results.to_csv('./results_transfer.csv')\n",
-    "results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n"
+    "    results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "    results.to_csv('./results_transfer.csv')\n",
+    "    results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "\n",
+    "    #except:\n",
+    "\n",
+    "        # dataset_names.append(dataset_name)\n",
+    "        # train_score_list.append(np.nan)\n",
+    "        # test_score_list.append(np.nan)\n",
+    "        # results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
+    "        # results.to_csv('./results_transfer.csv')\n",
+    "        # results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "        # continue\n"
    ]
   },
   {
