add nicod changes

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -641,7 +641,8 @@
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "loss='TripletLossSIMCLR'\n",
+    "loss = \"logi\"\n",
+    "temp = 1\n",
     "\n",
     "\n",
     "\n",
@@ -670,7 +671,8 @@
     "    test_path='', \n",
     "    dataset_name=dataset_name,\n",
     "    multivariate=True, \n",
-    "    loss_name=loss_name)\n",
+    "    loss = loss,\n",
+    "    temp = temp)\n",
     "\n",
     "model.datamodule = datamodule\n"
    ]
@@ -1152,7 +1154,8 @@
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "loss_name='TripletLossSIMCLR'\n",
+    "loss = \"logi\"\n",
+    "temp = 1\n",
     "\n",
     "\n",
     "# List of the multivariates dataset\n",
@@ -1196,7 +1199,8 @@
     "            test_path='', \n",
     "            dataset_name=dataset_name,\n",
     "            multivariate=True, \n",
-    "            loss_name=loss_name)\n",
+    "            loss = loss,\n",
+    "            temp = temp)\n",
     "\n",
     "        max_steps = 2000\n",
     "        checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
