Finalized Nicod addition

--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -641,7 +641,7 @@
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "loss = \"logi\"\n",
+    "loss = \"xent\"\n",
     "temp = 1\n",
     "\n",
     "\n",
@@ -742,6 +742,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try:\n",
+    "train_score, test_score = compute_accuracy(model, datamodule)\n",
+    "print(\"\\n\", train_score, test_score)\n",
+    "dataset_name.append(os.path.basename(dir_path))\n",
+    "wandb.log({\"Train score\": train_score})\n",
+    "wandb.log({\"Test score\": test_score})\n",
+    "train_score_list.append(train_score)\n",
+    "test_score_list.append(test_score)\n",
+    "run.finish()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "Q7xs-DuxJNjV"
    },
@@ -756,7 +787,10 @@
     "test_score_list.append(test_score)\n",
     "# except:\n",
     "#     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
-    "run.finish()"
+    "run.finish()\n",
+    "\n",
+    "results = pd.DataFrame(np.array([dataset_name, train_score_list, test_score_list]).transpose(),columns=[\"Name\", \"Train Accuracy\", \"Test Accuracy\"],)\n",
+    "results.to_csv(\"./results_transferability_multivariate.csv\")"
    ]
   },
   {
@@ -948,16 +982,30 @@
     "\n",
     "    in_channels = datamodule.train_set.time_series.shape[1]\n",
     "\n",
-    "    train_score, test_score = compute_scores_transfer(model, datamodule)\n",
-    "    print('\\n', train_score, test_score)\n",
-    "\n",
-    "    dataset_names.append(dataset_name)\n",
+    "    run = wandb.init(\n",
+    "            project=\"self-supervised-time-series\",\n",
+    "            name=\"Transfert - {}\".format(os.path.basename(dir_path)),\n",
+    "            tags=[os.path.basename(dir_path)],\n",
+    "            group=\"Transfert from FordA\",\n",
+    "            entity=\"nicolas-dufour-team\",\n",
+    "            reinit=True,\n",
+    "        )\n",
+    "    # try:\n",
+    "    train_score, test_score = compute_accuracy(model, datamodule)\n",
+    "    print(\"\\n\", train_score, test_score)\n",
+    "    dataset_name.append(os.path.basename(dir_path))\n",
+    "    wandb.log({\"Train score\": train_score})\n",
+    "    wandb.log({\"Test score\": test_score})\n",
     "    train_score_list.append(train_score)\n",
     "    test_score_list.append(test_score)\n",
-    "\n",
-    "    results = pd.DataFrame(np.array([dataset_names,train_score_list, test_score_list]).transpose(), columns=['Name', 'Train Accuracy', 'Test Accuracy'])\n",
-    "    results.to_csv('./results_transfer.csv')\n",
-    "    results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
+    "    # except:\n",
+    "    #     print('Dataset: {} does not have enough example per class (will fix that)'.format(os.path.basename(dir_path)))\n",
+    "    run.finish()\n",
+    "    results = pd.DataFrame(\n",
+    "        np.array([dataset_name, train_score_list, test_score_list]).transpose(),\n",
+    "        columns=[\"Name\", \"Train Accuracy\", \"Test Accuracy\"],\n",
+    "    )\n",
+    "    results.to_csv(\"./results_transferability_multivariate.csv\")\n",
     "\n",
     "    #except:\n",
     "\n",
@@ -969,31 +1017,6 @@
     "        # results.to_csv('/content/drive/MyDrive/results_transfer.csv')\n",
     "        # continue\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  master\u001b[m\n",
-      "* \u001b[32msam\u001b[m\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git branch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1154,7 +1177,7 @@
     "reduced_size = 160\n",
     "out_channels = 320\n",
     "kernel_size = 3\n",
-    "loss = \"logi\"\n",
+    "loss = \"xent\"\n",
     "temp = 1\n",
     "\n",
     "\n",
